Fix bug with z-index

--- a/src/style/buefy-styles.scss
+++ b/src/style/buefy-styles.scss
@@ -7,7 +7,7 @@ $primary-invert: findColorInvert($primary);
 $twitter: #4099FF;
 $twitter-invert: findColorInvert($twitter);
 
-$dark: #0b0e0e;
+$dark: #0f1313;
 $dark-box: #282f2f;
 
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
